Finished implementation of searching functionality for posts page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -11,8 +11,14 @@
     "TEXT": "In text"
   },
   "SORT": {
-    "NOT_SELECTED": "Sort",
+    "NOT_SELECTED": "None",
     "NEWEST": "Newest",
     "OLDEST": "Oldest"
+  },
+  "SIGHT": {
+    "LABEL": "Label",
+    "LATITUDE": "Latitude",
+    "LONGITUDE": "Longitude",
+    "DESCRIPTION": "Description"
   }
 }
