Updated registration mechanism
Added localization messages for registration errors.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -20,5 +20,11 @@
     "LATITUDE": "Latitude",
     "LONGITUDE": "Longitude",
     "DESCRIPTION": "Description"
+  },
+  "REGISTRATION": {
+    "TITLE": "Create your account",
+    "USER_EMAIL_ALREADY_EXIST": "Email already registered.",
+    "USER_USERNAME_ALREADY_EXIST": "Username already exists.",
+    "NEW_PASSWORD_MISMATCHED": "Password mismatched"
   }
 }
